--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@typescript-eslint/parser": "^6.19.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^8.10.0",
+    "jest": "^29.7.0",
     "prettier": "^2.8.8"
   }
 }
