--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "lib/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "test": "tsc && node ./tests/index.js"
+    "test": "tsc && jest"
   },
   "files": [
     "lib/"
