--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.23.9",
+    "@jest/globals": "^29.7.0",
     "@types/node": "^20.11.10",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
@@ -31,5 +32,8 @@
     "eslint-config-prettier": "^8.10.0",
     "jest": "^29.7.0",
     "prettier": "^2.8.8"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
