--- a/package.json
+++ b/package.json
@@ -25,13 +25,18 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7.23.9",
     "@jest/globals": "^29.7.0",
+    "@types/cookie": "^0.6.0",
     "@types/node": "^20.11.10",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
+    "axios": "^1.6.7",
+    "cookie": "^0.6.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^8.10.0",
     "jest": "^29.7.0",
-    "prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "uuid": "^9.0.1"
   },
   "jest": {
     "testEnvironment": "node"
